--- a/Objects/Project.build_log.htm
+++ b/Objects/Project.build_log.htm
@@ -5,11 +5,11 @@
 <h2>Tool Versions:</h2>
 IDE-Version: ¦ÌVision V5.25.3.0
 Copyright (C) 2018 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: YUc CCY, Dev, LIC=ZBD7S-LCP7Q-JUA4W-Q47GE-03QTJ-MCM6S
+License Information: YUC 835033913@qq.com, Dev, LIC=76PLD-89LV5-KZVW6-DJKJS-75GI5-EFTTY
  
 Tool Versions:
 Toolchain:       PK51 Prof. Developers Kit  Version: 9.60.7.0
-Toolchain Path:  C:\Keil_v5\C51\BIN
+Toolchain Path:  D:\Embedded_drive\Keil_v5\C51\BIN
 C Compiler:      C51.exe V9.60.7.0
 Assembler:       A51.exe V8.2.7.0
 Linker/Locator:  BL51.exe V6.22.4.0
@@ -18,13 +18,13 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0 
 <h2>Project:</h2>
-Y:\Workspace\CCY-VFD-HNV\Project.uvproj
-Project File Date:  11/05/2023
+D:\Embedded\C51_WorkSpace\CCY-VFD-HNV\Project.uvproj
+Project File Date:  11/06/2023
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
 compiling main.c...
-src\main.c(105): warning C280: 'key': unreferenced local variable
+src\main.c(89): warning C280: 'key': unreferenced local variable
 compiling gui.c...
 src\lib\SRC\gui.c(85): warning C280: 'index': unreferenced local variable
 src\lib\SRC\gui.c(102): warning C280: 'colon': unreferenced local variable
@@ -32,7 +32,11 @@ compiling pt6315.c...
 compiling rx8025.c...
 compiling sys.c...
 compiling ws2812b.c...
+assembling isr.asm...
+compiling eeprom.c...
 linking...
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?TIME_CANCEL?MAIN
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?VFD_GUI_STOP?GUI
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
@@ -48,16 +52,34 @@ linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_HAL_UART_SEND?SYS
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?HAL_SYSTICK_GET?SYS
+    SEGMENT: ?PR?_DELAY_MS?SYS
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?RGB_CLEAR?WS2812B
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_EE_READ?EEPROM
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_EE_ERASE?EEPROM
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_EE_WRITE?EEPROM
 *** WARNING L15: MULTIPLE CALL TO SEGMENT
     SEGMENT: ?PR?_DELAY_US?SYS
-    CALLER1: ?PR?WS2812B_TIMER_ISR?WS2812B
+    CALLER1: ?PR?TIME_ISR?MAIN
     CALLER2: ?C_C51STARTUP
-Program Size: data=35.3 xdata=307 code=7304
+*** WARNING L15: MULTIPLE CALL TO SEGMENT
+    SEGMENT: ?PR?_WRITEDATA?PT6315
+    CALLER1: ?PR?TIME_ISR?MAIN
+    CALLER2: ?C_C51STARTUP
+*** WARNING L15: MULTIPLE CALL TO SEGMENT
+    SEGMENT: ?PR?_SENDDIGANDDATA?PT6315
+    CALLER1: ?PR?TIME_ISR?MAIN
+    CALLER2: ?C_C51STARTUP
+*** WARNING L15: MULTIPLE CALL TO SEGMENT
+    SEGMENT: ?PR?_MAP?GUI
+    CALLER1: ?PR?TIME_ISR?MAIN
+    CALLER2: ?C_C51STARTUP
+Program Size: data=47.3 xdata=322 code=7449
 creating hex file from ".\Objects\Project"...
-".\Objects\Project" - 0 Error(s), 13 Warning(s).
+".\Objects\Project" - 0 Error(s), 20 Warning(s).
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
